--- a/Projeto_Site/Projeto_Site/Estilos/estilos.css
+++ b/Projeto_Site/Projeto_Site/Estilos/estilos.css
@@ -63,6 +63,7 @@
 	}
 
 	.container {
+	  max-width: 2500px;
 	  position: relative;
 	  margin: auto;
 	}
@@ -75,8 +76,7 @@
 	}
 	
 	.image-size{
-		width:1480px;
-		height:760px;
+		width:100%;
 		object-fit: cover;
 		filter:	brightness(0.7);
 	}
@@ -105,8 +105,7 @@
 	
 	/* Slideshow container */
 	.slideshow-container {
-		width:1480px;
-
+		width:100%;
 		position: relative;
 		top : 0%;
 		left: 0%;
