--- a/Projeto_Site/Projeto_Site/Estilos/estilos.css
+++ b/Projeto_Site/Projeto_Site/Estilos/estilos.css
@@ -196,11 +196,10 @@
   
 	/* Container do menu */
     .menu {
-		width: 1000px;
-    	background-color: #1a1a3c;
+		width: 100%;
     	padding-top: 20px;
 		padding-bottom: 20px;
-		padding-left: 250px;
+		padding-left: 210px;
     }
 
     /* Item principal */
