--- a/Projeto_Site/Projeto_Site/Estilos/estilos.css
+++ b/Projeto_Site/Projeto_Site/Estilos/estilos.css
@@ -1,6 +1,10 @@
 	
 	/* Classes base */
 	
+	head{
+		width: 100%;
+	}
+
 	li{
 		font-family: 'Orbitron', sans-serif;
 		color: white;
@@ -18,6 +22,7 @@
 	}
 	
 	body {
+		width: 100%;
 		font-family: tahoma; 
 		margin: 0;
 	}
@@ -36,14 +41,13 @@
 	iframe{
 		background-color: rgb(11, 15, 43, 1);
 		width: 100%;
-		max-width: 100%;
 		margin: auto;
 		border: none;
 		overflow: hidden;
 	}
 	
 	/* Classes especificas */
-
+	
 	.limite {
 		position: relative;
 		max-width: 50%;
@@ -63,7 +67,7 @@
 	}
 
 	.container {
-	  max-width: 2500px;
+	  max-width: 1500px;
 	  position: relative;
 	  margin: auto;
 	}
@@ -105,7 +109,7 @@
 	
 	/* Slideshow container */
 	.slideshow-container {
-		width:100%;
+		width:70%;
 		position: relative;
 		top : 0%;
 		left: 0%;
