--- a/Projeto_Site/Projeto_Site/Estilos/estilos.css
+++ b/Projeto_Site/Projeto_Site/Estilos/estilos.css
@@ -1,6 +1,32 @@
 	
 	/* Classes base */
 	
+	@media (max-width: 768px) {
+	body {
+		font-size: 16px;
+		padding: 10px;
+	}
+
+	.menu {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .dropbtn {
+    width: 100%;
+    text-align: left;
+  }
+
+  table {
+    width: 100%;
+  }
+
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+}
+
 	head{
 		width: 100%;
 	}
@@ -334,3 +360,5 @@
 	 
 	}
 	}
+
+	
